# nebula-collection-api

./: .gitignore  README.md  UNITTESTS-README.md  nebula_api.py  pyproject.toml  requirements.txt  test_api.py  ultraman_cards.csv  ultraman_cards.db  update_card_db.py
.github/workflows/: api-tests.yml  card-db-sync.yml  card-download.yml  news-notify.yml  notify-newcards.yml
.well-known/: ai-plugin.json  openapi.yaml
discord-scripts/: errata_cards.json  last_cards.json  last_rss_uc_item.json  notify-newcards.py  u-connection-rss.py
public/: llms.txt
