[project]
name = "Nebula-API"
version = "0.2.0"
description = "an ULTRAMAN Card Game Collection API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.124.2",
    "pydantic==2.12.5",
    "uvicorn[standard]==0.38.0",
    "pandas==2.3.3",
    "numpy==2.3.5",
]

[project.scripts]
app = "nebula_api:app"
